<resources>
    <string name="app_name">阅心VR</string>
    <string name="play_mode">播放模式</string>
    <string name="autoplay_next">自动播放下一个</string>
    <string name="loop_play">循环播放</string>
    <string name="setting">设置</string>
    <string name="fullscreen_double_screen">全屏播放默认双屏</string>
    <string name="version_update">版本更新</string>
    <string name="personal_center">个人中心</string>
    <string name="login_or_signup">登录 / 注册</string>
    <string name="username">用户名：(默认为手机号)</string>
    <string name="password">密码：</string>
    <string name="signup">注册</string>
    <string name="age">年龄：</string>
    <string name="job">工作：</string>
    <string name="phonenumber">手机号：</string>
    <string name="religion">宗教信仰：</string>
    <string name="appname">阅心VR</string>
    <string name="froget_password">忘记密码</string>
    <string name="login">登录</string>
    <string name="signup_phonenumber">请输入手机号</string>
    <string name="input_verify_code">请输入验证码</string>
    <string name="ok">确定</string>
    <string name="send_verify_code">发送验证码</string>
    <string name="message_verify">短信验证</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="change_password">修改密码</string>
    <string name="more">更多分类</string>
    <string name="more_channel">更多频道</string>
    <string name="newest_video">最新视频</string>
    <string name="religionary">宗教文化</string>
    <string name="landscaoe">自然风景</string>
    <string name="history">历史人文</string>
    <string name="thirdlypart_signip">第三方账号登录</string>
    <string name="sort_by_play">播放排序</string>
    <string name="sort_by_time">时间排序</string>
    <string name="phonenumber_can_not_empty">手机号码不能为空</string>
    <string name="phonenumber_format_is_not_correct">手机号码格式不正确</string>
    <string name="verify_code_incorrect">验证码错误</string>
    <string name="username_can_not_be_nul">用户名不能为空</string>
    <string name="password_can_not_be_empty">密码不能为空</string>
    <string name="cancel">取消</string>
    <string name="exit_login">是否要退出登录</string>
    <string name="unregister">注销</string>
    <string name="play_counts">已播放%1$d次</string>
    <string name="release_time">发布于:%1$s</string>
    <string name="download_now">立即下载</string>
    <string name="more_recommend">更多推荐</string>
    <string name="password_not_equals">两次输入的密码不一致</string>
    <string name="please_enter_the_authorization">请授权!</string>
    <string name="must_get_camera_permission">必须存储读写权限才能进行读取视频!</string>
    <string name="video_load_error">视频加载出错</string>
    <string name="login_cancel">授权登陆已取消</string>
    <string name="login_failed">授权登陆失败</string>
    <string name="played_list">付费视频列表</string>
    <string name="pay">付费</string>
    <string name="more_videos">更多视频</string>

    <string-array name="array_religions">
        <item>佛教</item>
        <item>道教</item>
        <item>基督教</item>
        <item>伊斯兰教</item>
    </string-array>


</resources>
