<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/gray_eeeeee"
              android:gravity="center_horizontal"
              android:orientation="vertical"

>
    <include layout="@layout/include_titlebar"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dip_30px"
        android:layout_marginRight="@dimen/dip_30px"
        android:layout_marginTop="@dimen/dip_40px"
        android:background="@drawable/background_rounded_rectangle_white"
        android:orientation="vertical">
        
        <EditText
            android:id="@+id/edittext_change_password_password"
            style="@style/Edittext_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:hint="@string/password"
            android:inputType="textPassword"/>
        
        <EditText
            android:id="@+id/edittext_change_password_confirm_password"
            style="@style/Edittext_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edittext_change_password_password"
            android:layout_marginBottom="61dp"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"/>

    </RelativeLayout>
    <Button
        android:id="@+id/button_change_password_ok"
        style="@style/Button"
        android:layout_width="260dp"
        android:layout_height="@dimen/dip_100px"
        android:layout_marginTop="-25dp"
        android:text="@string/ok"/>
</LinearLayout>
